[build-system]
requires = [
  "setuptools>=64",
  "setuptools_scm>=8",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.isort]
known_third_party = [
    'mock',
]
include_trailing_comma = true
line_length = 100
lines_after_imports = 2
multi_line_output = 3
skip_glob = [
    '*/.eggs/*',
    '*/.pytype/*',
    '*/.tox/*',
]

[tool.mypy]
ignore_missing_imports = true
python_version = 3.8

pretty = true
show_error_codes = true
show_error_context = true
warn_unreachable = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [
    ".eggs/",
    ".tox/",
    "_sandbox/*",
    "build/",
    "docs/conf.py",
]
